<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="180dp"
    android:padding="10dp"
    android:layout_marginTop="20dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <TextView
        android:id="@+id/idnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:padding="20dp"
        android:text="@string/_1"
        android:textColor="#FF000000"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/output"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/idnum"
        android:padding="20dp"
        android:text="@string/example"
        android:textColor="#FF000000"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/deleteicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="20dp"
        android:src="@drawable/ic_baseline_delete_24"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/selectedTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/output"
        android:text="@string/_08_45_pm"
        android:textAlignment="center"
        android:textColor="#FF000000"
        android:textSize="40sp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>